[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/shared/numpad/numpad.gd" type="Script" id=1]
[ext_resource path="res://fonts/time_and_space/TimeandSpace-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="Numpad" type="GridContainer"]
margin_right = 280.0
margin_bottom = 280.0
size_flags_vertical = 3
columns = 4
script = ExtResource( 1 )

[node name="Button1" type="Button" parent="."]
margin_right = 67.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button2" type="Button" parent="."]
margin_left = 71.0
margin_right = 138.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button3" type="Button" parent="."]
margin_left = 142.0
margin_right = 209.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button4" type="Button" parent="."]
margin_left = 213.0
margin_right = 280.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button5" type="Button" parent="."]
margin_top = 71.0
margin_right = 67.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button6" type="Button" parent="."]
margin_left = 71.0
margin_top = 71.0
margin_right = 138.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button7" type="Button" parent="."]
margin_left = 142.0
margin_top = 71.0
margin_right = 209.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button8" type="Button" parent="."]
margin_left = 213.0
margin_top = 71.0
margin_right = 280.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button9" type="Button" parent="."]
margin_top = 142.0
margin_right = 67.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button10" type="Button" parent="."]
margin_left = 71.0
margin_top = 142.0
margin_right = 138.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button11" type="Button" parent="."]
margin_left = 142.0
margin_top = 142.0
margin_right = 209.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button12" type="Button" parent="."]
margin_left = 213.0
margin_top = 142.0
margin_right = 280.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button13" type="Button" parent="."]
margin_top = 213.0
margin_right = 67.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button14" type="Button" parent="."]
margin_left = 71.0
margin_top = 213.0
margin_right = 138.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button15" type="Button" parent="."]
margin_left = 142.0
margin_top = 213.0
margin_right = 209.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

[node name="Button16" type="Button" parent="."]
margin_left = 213.0
margin_top = 213.0
margin_right = 280.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "o"

